# s5d

./: .gitignore  LICENSE  NOTICE  README.md  S5D.md  ai.txt  gemini-extension.json  install.sh
.claude/: CLAUDE.md  scratchpad.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: check.yml  release.yml  s5d.yml
.s5d/: aliases.yaml  config.yaml  index.yaml  ledger.yaml
.s5d/codebase/: coverage.yaml  modules.yaml
.s5d/discovery/: evidence.jsonl  files.jsonl  graph.json  manifest.yaml  metamodel.yaml
.s5d/records/: feat.s5d.ci-init__20260611.record.yaml  (+55 more)
docs/: index.html  s5d-v2-workflow-spec.md  testing-and-benchmarking.md
examples/: decision-example.record.yaml  decision-example.s5d.yaml  skill-benchmark.json
hooks/: check-update.sh  hooks.json  pre-commit-validate.sh  require-spec.sh  s5d-validate.sh  sync-fpf.sh
rust/: Cargo.toml
rust/src/: analyze.rs  arch.rs  benchmark.rs  blast_radius.rs  ci.rs  ci_github_workflow.tpl  ci_gitlab_fragment.tpl  codebase.rs  contracts.rs  debt.rs  discovery.rs  drift.rs  gate.rs  gates.rs  git_state.rs  graph.rs  health.rs  hooks_json.rs  identity.rs  import.rs  infer.rs  learn.rs  lib.rs  lsp.rs  mandate.rs  mcp.rs  models.rs  phase_gates.rs  project.rs  ralph.rs  render.rs  report.rs  router.rs  rules.rs  shape.rs  template.rs  trace.rs  validate.rs
rust/src/codebase/: annotations.rs  embeddings.rs  graph.rs  mod.rs  parser.rs  search.rs  storage.rs  suggest.rs  trace.rs
rust/src/fpf/: doc_index.rs  embeddings.rs  mod.rs
rust/src/suite/: ddd.rs  flatten.rs  mod.rs  scaling.rs  scan.rs
rust/src/templates/: domain_map.html
rust/tests/: benchmark_suite.rs  docs_sync.rs  fpf.rs  mcp_wire.rs  routing_behavior.rs  standalone_repos.rs
(+641 files in other folders)
