[package]
name = "s5d"
version = "2.1.0"
edition = "2021"
description = "S5D — Decision & Feature Framework CLI"

[[bin]]
name = "s5d"
path = "src/bin/s5d.rs"

[lib]
name = "s5d"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "6"
rusqlite = { version = "0.39", features = ["bundled"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
streaming-iterator = "0.1"
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs.git", features = ["metal"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"
