[package]
name = "s5d"
version = "0.1.0"
edition = "2021"
description = "S5D — Decision & Feature Framework CLI"

[[bin]]
name = "s5d"
path = "src/bin/s5d.rs"

[lib]
name = "s5d"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
glob = "0.3"
regex = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
